--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
+            <section class="w3-container w3-center" style="max-width: 600px">
+                <h2 class="w3-wide">The Band</h2>
+                <p class="w3-opacity"><i>We love music</i></p>
+            </section>
         <script>
             let slideIndex = 1;
             showslides(slideIndex);
