--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-            <section class="w3-container w3-center" style="max-width: 600px">
+            <section class="w3-container w3-center w3-content" style="max-width: 600px">
                 <h2 class="w3-wide">The Band</h2>
                 <p class="w3-opacity"><i>We love music</i></p>
             </section>
