--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-            <section class="w3-container w3-center w3-content" style="max-width: 600px">
-                <h2 class="w3-wide">The Band</h>
+            <section class="w3-container w3-center w3-content">
+                <p class="w3-center">We love music.</p>
             </section>
         <script>
             let slideIndex = 1;
