--- a/index.html
+++ b/index.html
@@ -1,151 +1,101 @@
 <html>
     <head>
-        <title>Portfolio Website</title>
-        <style>
-            ul{
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                background-color: #333;
-            }
-            li{
-                float: left;
-            }
-            li a{
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-            li a:hover{
-                background-color: #be2e2e;
-            }
-            .slideshow-container{
-                max-width: 1000px;
-                position: relative;
-                margin: auto;
-            }
-            .prev, .next{
-                cursor: pointer;
-                position: absolute;
-                top: 50%;
-                width: auto;
-                padding: 16px;
-                margin-top: -22px;
-                color: white;
-                font-weight: bold;
-                font-size: 18px;
-                transition: 0.6s ease;
-                border-radius: 0 3px 3px 0;
-                user-select: none;
-            }
-            *{box-sizing: border-box}
-            body{font-family: Verdana, Geneva, Tahoma, sans-serif; margin: 0}
-            .mySlides{display: none}
-            img{vertical-align: middle;}
-            .next{
-                right: 0;
-                border-radius: 3px 0 0 3px;
-            }
-            .prev:hover, .next:hover {
-                background-color: rgba(0,0,0,0.8);
-            }
-            .text{
-                color: #f2f2f2;
-                font-size: 15px;
-                padding: 8px 12px;
-                position: absolute;
-                bottom: 8px;
-                width: 100%;
-                text-align: center;
-            }
-            .numbertext{
-                color: #f2f2f2;
-                font-size: 12px;
-                padding: 8px 12px;
-                position: absolute;
-                top: 0;
-            }
-            .dot{
-                cursor: pointer;
-                height: 15px;
-                width: 15px;
-                margin: 0 2px;
-                background-color: #bbb;
-                border-radius: 50%;
-                display: inline-block;
-                transition: background-color 0.6s ease;
-            }
-        </style>
-        </head>
-        <body>
-            <!--Navigation or Menu Bar-->
-            <ul>
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="portfolio.css">
+    </head>
+    <body>
 
-            <!--Header with Carousel Image-->
-            <div class="slideshow-container">
+        <!--NAVIGATION BAR-->
+        <div class="topnav">
+            <a href="#home">Home</a>
+            <a href="#info">Info</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+        <br>
 
-                <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="image 1.jpg" style="width: 100%">
-                    <div class="text">Caption One</div>
-                </div>
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="image 2.jpg" style="width: 100%">
-                    <div class="text">Caption Two</div>
-                </div>
-                <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="image 3.jpg" style="width: 100%">
-                    <div class="text">Caption Three</div>
-                </div>
-                <a class="prev" onclick="plusSlides(-1)"><</a>
-                <a class="next" onclick="plusSlides(1)">></a>
+        <!--SLIDESHOW-->
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="air3.jpg" style="width: 100%">
             </div>
-            <br>
-            <div style="text-align: center;">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="air2.jpg" style="width: 100%">
             </div>
-            <section class="w3-container w3-center w3-content">
-                <p class="w3-center">We love music.</p>
-            </section>
-        <script>
-            let slideIndex = 1;
-            showslides(slideIndex);
 
-            function plusSlides(n){
-                showslides(slideIndex += n);
-            }
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="air1.jpg" style="width: 100%">
+            </div>
 
-            function currentSlide(n){
-                showslides(slideIndex = n);
-            }
+            <a class="prev" onclick="plusSlides(-1)">&#10094</a>
+            <a class="next" onclick="plusSlides(1)">&#10095</a>
+        </div>
+        <br>
 
-            function showslides(n){
-                let i;
-                let slides = document.getElementsByClassName("mySlides");
-                let dots = document.getElementsByClassName("dot");
-                if (n > slides.length) {slideIndex = 1}
-                if (n < 1) {slideIndex = slides.length}
-                for (i = 0; i < slides.length;i++){
-                    slides[i].style.display = "none";
-                }
-                for (i = 0; i < dots.length; i++){
-                    dots[i].className = dots[i].className.replace("active","");
-                }
-                slides[slideIndex-1].style.display = "block";
-                dots[slideIndex-1].className +="active";
-            }
-        </script>
-        </body>
+        <!--About Section-->
+        <div class="about-section">
+            <h1>About Us</h1>
+            <p>Welcome to Global Getwaway, your trusted travel partner for unforgettable journeys! We specialize in taking you to three incredible destinations, each offering unique experiences and breathtaking adventures. Whether you're seeking cultural exploration, thrilling outdoor activities, or serene getaways, we ensure every trip is seamless and memorable. Our mission is to provide personalized, hassle-free travel experiences so you can focus on making memories that last a lifetime. Let us take you on an adventure you'll never forget!</p>
+        </div>
+
+        <h2 style="text-align: center">Our Locations</h2>
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="places1.jpg" alt="image1" style="width: 100%">
+                    <div class="container">
+                        <h2>Emerald Meadows</h2>
+                        <p class="title">Colorado, USA</p>
+                        <p>A peaceful landscape with lush greenery, a serene pond, and golden autumn reflections. Perfect for a relaxing getaway.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <img src="places2.jpg" alt="image2" style="width: 100%">
+                    <div class="container">
+                        <h2>Crystal Lake Retreat</h2>
+                        <p class="title">Banff, Canada</p>
+                        <p>A breathtaking glacial lake surrounded by towering snow-capped mountains, offering a dreamlike escape into nature.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <img src="places3.jpg" alt="image3" style="width: 100%">
+                    <div class="container">
+                        <h2>Lotus Serenity Park</h2>
+                        <p class="title">Kyoto, Japan</p>
+                        <p>A tranquil water garden with vibrant greenery, floating lotus flowers, and a charming stone bridge, ideal for peaceful reflection.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+
+        <!--Contact Section-->
+        <div class="contact-container">
+            <h2>Contact Us</h2>
+            <form>
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea placeholder="Your Message" rows="5"></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+        <br>
+
+        <!--Footer-->
+        <div class="footer">
+            <p>Copyright © 2025 Global Getaway</p>
+        </div>
+    <script src="portfolio.js"></script>
+    </body>
 </html>
