--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="portfolio.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
 
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="column">
                 <div class="card">
-                    <img src="places1.jpg" alt="image1" style="width: 100%">
+                    <img src="image 1.jpg" alt="image1" style="width: 100%">
                     <div class="container">
                         <h2>Emerald Meadows</h2>
                         <p class="title">Colorado, USA</p>
@@ -58,7 +58,7 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="places2.jpg" alt="image2" style="width: 100%">
+                    <img src="image 2.jpg" alt="image2" style="width: 100%">
                     <div class="container">
                         <h2>Crystal Lake Retreat</h2>
                         <p class="title">Banff, Canada</p>
@@ -69,7 +69,7 @@
 
             <div class="column">
                 <div class="card">
-                    <img src="places3.jpg" alt="image3" style="width: 100%">
+                    <img src="image 3.jpg" alt="image3" style="width: 100%">
                     <div class="container">
                         <h2>Lotus Serenity Park</h2>
                         <p class="title">Kyoto, Japan</p>
@@ -96,6 +96,6 @@
         <div class="footer">
             <p>Copyright © 2025 Global Getaway</p>
         </div>
-    <script src="portfolio.js"></script>
+    <script src="index.js"></script>
     </body>
 </html>
