--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="air1.jpg" style="width: 100%">
+                <img src="education1.jpg" style="width: 100%">
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="air2.jpg" style="width: 100%">
+                <img src="education2.2.jpg" style="width: 100%">
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="air3.jpg" style="width: 100%">
+                <img src="education3.jpg" style="width: 100%">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094</a>
@@ -39,41 +39,41 @@
 
         <!--About Section-->
         <div class="about-section">
-            <h1>About Us</h1>
-            <p>Welcome to Global Getwaway, your trusted travel partner for unforgettable journeys! We specialize in taking you to three incredible destinations, each offering unique experiences and breathtaking adventures. Whether you're seeking cultural exploration, thrilling outdoor activities, or serene getaways, we ensure every trip is seamless and memorable. Our mission is to provide personalized, hassle-free travel experiences so you can focus on making memories that last a lifetime. Let us take you on an adventure you'll never forget!</p>
+            <h1>About Me</h1>
+            <p>I am a curious and driven individual with a strong desire to learn and grow. Always seeking new experiences and challenges, I approach life with an open mind and a positive attitude. Whether exploring new ideas, building connections, or diving into personal passions, I have a unique ability to adapt and thrive in various situations. My determination and enthusiasm inspire those around me, making me someone who is always looking toward the future with excitement.</p>
         </div>
 
-        <h2 style="text-align: center">Our Locations</h2>
+        <h2 style="text-align: center">My Education</h2>
         <div class="row">
             <div class="column">
                 <div class="card">
-                    <img src="image 1.jpg" alt="image1" style="width: 100%">
+                    <img src="eps.jpg" alt="image1" style="width: 100%">
                     <div class="container">
-                        <h2>Emerald Meadows</h2>
-                        <p class="title">Colorado, USA</p>
-                        <p>A peaceful landscape with lush greenery, a serene pond, and golden autumn reflections. Perfect for a relaxing getaway.</p>
+                        <h2>English Prepatory Secondary School</h2>
+                        <p class="title">Baneshwor, Kathmandu</p>
+                        <p>EPS School is a reputed educational institution offering quality education from preschool to secondary levels. It focuses on holistic development, blending academics with extracurricular activities to nurture students' skills and talents.</p>
                     </div>
                 </div>
             </div>
 
             <div class="column">
                 <div class="card">
-                    <img src="image 2.jpg" alt="image2" style="width: 100%">
+                    <img src="khwopa.jpg" alt="image2" style="width: 100%">
                     <div class="container">
-                        <h2>Crystal Lake Retreat</h2>
-                        <p class="title">Banff, Canada</p>
-                        <p>A breathtaking glacial lake surrounded by towering snow-capped mountains, offering a dreamlike escape into nature.</p>
+                        <h2>Khwopa College</h2>
+                        <p class="title">Dekocha, Bhaktapur</p>
+                        <p>Khwopa College in Bhaktapur, Nepal, is a renowned institution offering diverse academic programs in science, management, and humanities. It focuses on providing quality education while promoting research, extracurricular activities, and community involvement</p>
                     </div>
                 </div>
             </div>
 
             <div class="column">
                 <div class="card">
-                    <img src="image 3.jpg" alt="image3" style="width: 100%">
+                    <img src="nesfield.jpg" alt="image3" style="width: 100%">
                     <div class="container">
-                        <h2>Lotus Serenity Park</h2>
-                        <p class="title">Kyoto, Japan</p>
-                        <p>A tranquil water garden with vibrant greenery, floating lotus flowers, and a charming stone bridge, ideal for peaceful reflection.</p>
+                        <h2>Nesfield Intl' College</h2>
+                        <p class="title">Batuk Bhairab, Lalitpur</p>
+                        <p>Nesfield International College in Kathmandu, Nepal, offers a range of academic programs in management, science, and humanities. The college is known for its modern teaching methods, dedicated faculty, and emphasis on holistic student development.</p>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
 
         <!--Contact Section-->
         <div class="contact-container">
-            <h2>Contact Us</h2>
+            <h2>Contact Me</h2>
             <form>
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
